==> adafruit/circuitpython/ports/espressif/common-hal/_bleio/Adapter.c <==
#include <math.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "py/gc.h"
#include "py/objstr.h"
#include "py/runtime.h"
#include "supervisor/shared/bluetooth/bluetooth.h"
#include "supervisor/shared/safe_mode.h"
#include "supervisor/shared/tick.h"
#include "shared-bindings/_bleio/__init__.h"
#include "shared-bindings/_bleio/Adapter.h"
#include "shared-bindings/_bleio/Address.h"
#include "shared-bindings/nvm/ByteArray.h"
#include "shared-bindings/_bleio/Connection.h"
#include "shared-bindings/_bleio/ScanEntry.h"
#include "shared-bindings/time/__init__.h"
#include "shared/runtime/interrupt_char.h"
#include "controller/ble_ll_adv.h"
#include "nimble/hci_common.h"
#include "nimble/nimble_port.h"
#include "nimble/nimble_port_freertos.h"
#include "host/ble_gap.h"
#include "host/util/util.h"
#include "services/ans/ble_svc_ans.h"
#include "services/gap/ble_svc_gap.h"
#include "services/gatt/ble_svc_gatt.h"
#include "bindings/espidf/__init__.h"
#include "common-hal/_bleio/Connection.h"
#include "esp_bt.h"
#include "esp_mac.h"
#include "esp_nimble_hci.h"
#include "nvs_flash.h"
#include "supervisor/shared/settings.h"

void common_hal_bleio_adapter_set_enabled(bleio_adapter_obj_t *self, bool enabled) {
    const bool is_enabled = common_hal_bleio_adapter_get_enabled(self);

    // Don't enable or disable twice
    if (is_enabled == enabled) {
        return;
    }

    if (enabled) {
        CHECK_ESP_RESULT(nimble_port_init());

        // ble_hs_cfg.reset_cb = blecent_on_reset;
        ble_hs_cfg.sync_cb = _on_sync;
        ble_hs_cfg.store_status_cb = ble_store_util_status_rr;

        ble_hs_cfg.sm_io_cap = BLE_SM_IO_CAP_NO_IO;
        ble_hs_cfg.sm_bonding = 1;
        /* Enable the appropriate bit masks to make sure the keys
         * that are needed are exchanged
         */
        ble_hs_cfg.sm_our_key_dist |= BLE_SM_PAIR_KEY_DIST_ENC;
        ble_hs_cfg.sm_their_key_dist |= BLE_SM_PAIR_KEY_DIST_ENC;

        ble_hs_cfg.sm_mitm = 0;
        ble_hs_cfg.sm_sc = 0;
        /* Stores the IRK */
        ble_hs_cfg.sm_our_key_dist |= BLE_SM_PAIR_KEY_DIST_ID;
        ble_hs_cfg.sm_their_key_dist |= BLE_SM_PAIR_KEY_DIST_ID;

        ble_svc_gap_init();
        ble_svc_gatt_init();
        ble_svc_ans_init();

        #if CIRCUITPY_SETTINGS_TOML
        char ble_name[1 + MYNEWT_VAL_BLE_SVC_GAP_DEVICE_NAME_MAX_LENGTH];
        settings_err_t result = settings_get_str("CIRCUITPY_BLE_NAME", ble_name, sizeof(ble_name));
        if (result == SETTINGS_OK) {
            ble_svc_gap_device_name_set(ble_name);
        } else
        #endif
        {
            uint8_t mac[6];
            esp_read_mac(mac, ESP_MAC_BT);
            mp_int_t len = sizeof(default_ble_name) - 1;
            default_ble_name[len - 6] = nibble_to_hex_lower[mac[3] >> 4 & 0xf];
            default_ble_name[len - 5] = nibble_to_hex_lower[mac[3] & 0xf];
            default_ble_name[len - 4] = nibble_to_hex_lower[mac[4] >> 4 & 0xf];
            default_ble_name[len - 3] = nibble_to_hex_lower[mac[4] & 0xf];
            default_ble_name[len - 2] = nibble_to_hex_lower[mac[5] >> 4 & 0xf];
            default_ble_name[len - 1] = nibble_to_hex_lower[mac[5] & 0xf];
            default_ble_name[len] = '\0'; // for now we add null for compatibility with C ASCIIZ strings
            ble_svc_gap_device_name_set(default_ble_name);
        }

        // Clear all of the internal connection objects.
        for (size_t i = 0; i < BLEIO_TOTAL_CONNECTION_COUNT; i++) {
            bleio_connection_internal_t *connection = &bleio_connections[i];
            // Reset connection.
            connection->conn_handle = BLEIO_HANDLE_INVALID;
        }

        ble_store_config_init();

        _nimble_sync = false;
        nimble_port_freertos_init(nimble_host_task);
        // Wait for sync from nimble task.
        const uint64_t timeout_time_ms = common_hal_time_monotonic_ms() + 200;
        while (!_nimble_sync && (common_hal_time_monotonic_ms() < timeout_time_ms)) {
            RUN_BACKGROUND_TASKS;
            if (mp_hal_is_interrupted()) {
                // Return prematurely. Then the interrupt will be raised.
                return;
            }
        }

        if (!_nimble_sync) {
            mp_raise_RuntimeError(MP_ERROR_TEXT("Update failed"));
        }
    } else {
        int ret = nimble_port_stop();
        while (xTaskGetHandle("nimble_host") != NULL && !mp_hal_is_interrupted()) {
            RUN_BACKGROUND_TASKS;
            common_hal_time_delay_ms(2);
        }
        if (ret == 0) {
            nimble_port_deinit();
        }
    }
}

bleio_address_obj_t *common_hal_bleio_adapter_get_address(bleio_adapter_obj_t *self) {
    uint8_t address_bytes[6];
    uint8_t address_type = BLE_ADDR_RANDOM;
    ble_hs_id_infer_auto(0, &address_type);
    int result = ble_hs_id_copy_addr(address_type, address_bytes, NULL);
    if (result != 0) {
        return NULL;
    }

    bleio_address_obj_t *address = mp_obj_malloc(bleio_address_obj_t, &bleio_address_type);
    common_hal_bleio_address_construct(address, address_bytes, BLEIO_ADDRESS_TYPE_RANDOM_STATIC);
    return address;
}

mp_obj_t common_hal_bleio_adapter_start_scan(bleio_adapter_obj_t *self, uint8_t *prefixes,
    size_t prefix_length, bool extended, mp_int_t buffer_size, mp_float_t timeout,
    mp_float_t interval, mp_float_t window, mp_int_t minimum_rssi, bool active) {
    if (self->scan_results != NULL) {
        if (!shared_module_bleio_scanresults_get_done(self->scan_results)) {
            mp_raise_bleio_BluetoothError(MP_ERROR_TEXT("Scan already in progress. Stop with stop_scan."));
        }
        self->scan_results = NULL;
    }

    self->scan_results = shared_module_bleio_new_scanresults(buffer_size, prefixes, prefix_length, minimum_rssi);
    // size_t max_packet_size = extended ? BLE_HCI_MAX_EXT_ADV_DATA_LEN : BLE_HCI_MAX_ADV_DATA_LEN;

    uint8_t own_addr_type;
    struct ble_gap_disc_params disc_params;

    /* Figure out address to use while advertising (no privacy for now) */
    int privacy = 0;
    CHECK_NIMBLE_ERROR(ble_hs_id_infer_auto(privacy, &own_addr_type));

    disc_params.filter_duplicates = 0;
    disc_params.passive = !active;
    disc_params.itvl = interval / 0.625;
    disc_params.window = window / 0.625;
    disc_params.filter_policy = 0;
    disc_params.limited = 0;

    size_t duration_ms = timeout * 1000;
    if (duration_ms == 0) {
        duration_ms = BLE_HS_FOREVER;
    }

    int tries = 5;
    int status;
    // BLE_HS_EBUSY may occasionally occur, indicating something has not finished. Retry a few times if so.
    do {
        status = ble_gap_disc(own_addr_type, duration_ms, &disc_params,
            _scan_event, self->scan_results);
        if (status != BLE_HS_EBUSY) {
            break;
        }
        common_hal_time_delay_ms(50);
        RUN_BACKGROUND_TASKS;
    } while (tries-- > 0);
    CHECK_NIMBLE_ERROR(status);

    return MP_OBJ_FROM_PTR(self->scan_results);
}

static void _convert_address(const bleio_address_obj_t *address, ble_addr_t *nimble_address) {
    nimble_address->type = address->type;
    mp_buffer_info_t address_buf_info;
    mp_get_buffer_raise(address->bytes, &address_buf_info, MP_BUFFER_READ);
    memcpy(nimble_address->val, (uint8_t *)address_buf_info.buf, NUM_BLEIO_ADDRESS_BYTES);
}

mp_obj_t common_hal_bleio_adapter_connect(bleio_adapter_obj_t *self, bleio_address_obj_t *address, mp_float_t timeout) {
    // Stop any active scan.
    if (self->scan_results != NULL) {
        common_hal_bleio_adapter_stop_scan(self);
    }

    struct ble_gap_conn_params conn_params = {
        .scan_itvl = MSEC_TO_UNITS(100, UNIT_0_625_MS),
        .scan_window = MSEC_TO_UNITS(100, UNIT_0_625_MS),
        .itvl_min = MSEC_TO_UNITS(15, UNIT_1_25_MS),
        .itvl_max = MSEC_TO_UNITS(300, UNIT_1_25_MS),
        .latency = 0,
        .supervision_timeout = MSEC_TO_UNITS(4000, UNIT_10_MS),
        .min_ce_len = BLE_GAP_INITIAL_CONN_MIN_CE_LEN,
        .max_ce_len = BLE_GAP_INITIAL_CONN_MAX_CE_LEN
    };

    uint8_t own_addr_type;
    // TODO: Use a resolvable address if the peer has our key.
    CHECK_NIMBLE_ERROR(ble_hs_id_infer_auto(false, &own_addr_type));

    ble_addr_t addr;
    _convert_address(address, &addr);

    const int timeout_ms = SEC_TO_UNITS(timeout, UNIT_1_MS) + 0.5f;
    CHECK_NIMBLE_ERROR(
        ble_gap_connect(own_addr_type, &addr,
            timeout_ms,
            &conn_params,
            _connect_event, self));

    // Wait an extra 50 ms to give the connect method the opportunity to time out.

    const uint64_t timeout_time_ms = common_hal_time_monotonic_ms() + timeout_ms;
    // _connection_status gets set to either a positive connection handle or a negative error code.
    _connection_status = BLEIO_HANDLE_INVALID;
    while (_connection_status == BLEIO_HANDLE_INVALID && (common_hal_time_monotonic_ms() < timeout_time_ms)) {
        RUN_BACKGROUND_TASKS;
        if (mp_hal_is_interrupted()) {
            // Return prematurely. Then the interrupt exception  will be raised.
            return mp_const_none;
        }
    }

    // Negative values are error codes, connection handle otherwise.
    if (_connection_status < 0) {
        CHECK_BLE_ERROR(-_connection_status);
    }
    const uint16_t conn_handle = _connection_status;

    // TODO: If we have keys, then try and encrypt the connection.

    // TODO: Negotiate for better PHY and data lengths since we are the central. These are
    // nice-to-haves so ignore any errors.

    // Make the connection object and return it.
    for (size_t i = 0; i < BLEIO_TOTAL_CONNECTION_COUNT; i++) {
        bleio_connection_internal_t *connection = &bleio_connections[i];
        if (connection->conn_handle == conn_handle) {
            connection->is_central = true;
            return bleio_connection_new_from_internal(connection);
        }
    }

    mp_raise_bleio_BluetoothError(MP_ERROR_TEXT("Failed to connect: internal error"));

    return mp_const_none;
}

uint32_t _common_hal_bleio_adapter_start_advertising(bleio_adapter_obj_t *self,
    bool connectable, bool anonymous, uint32_t timeout, float interval,
    const uint8_t *advertising_data, uint16_t advertising_data_len,
    const uint8_t *scan_response_data, uint16_t scan_response_data_len,
    mp_int_t tx_power, const bleio_address_obj_t *directed_to) {

    if (ble_gap_adv_active() && !self->user_advertising) {
        return BLE_HS_EBUSY;
    }
    // Override anonymous because it isn't working with the ESP-IDF.
    anonymous = false;

    uint32_t rc;

    ble_addr_t peer;
    if (directed_to != NULL) {
        _convert_address(directed_to, &peer);
    }

    uint8_t own_addr_type;
    // Anonymous addresses are still resolvable. (Following what the NRF
    // implementation does.)
    rc = ble_hs_id_infer_auto(anonymous, &own_addr_type);
    if (rc != NIMBLE_OK) {
        return rc;
    }

    bool high_duty_directed = directed_to != NULL && interval <= 3.5 && timeout <= 1; // Really 1.3, but it's an int

    uint32_t timeout_ms = timeout * 1000;
    if (timeout_ms == 0) {
        timeout_ms = BLE_HS_FOREVER;
    }


    #if MYNEWT_VAL(BLE_EXT_ADV)
    bool extended = advertising_data_len > BLE_ADV_LEGACY_DATA_MAX_LEN ||
        scan_response_data_len > BLE_ADV_LEGACY_DATA_MAX_LEN;

    bool scannable = scan_response_data_len > 0;
    bool legacy_pdu = !extended && !anonymous;
    if (legacy_pdu && connectable) {
        // Connectable legacy advertisements are always scannable too.
        scannable = true;
    }

    struct ble_gap_ext_adv_params adv_params = {
        .connectable = connectable,
        .scannable = scannable,
        .directed = directed_to != NULL,
        .high_duty_directed = high_duty_directed,
        .legacy_pdu = legacy_pdu,
        .anonymous = anonymous,
        .include_tx_power = extended,
        .scan_req_notif = false,
        .itvl_min = SEC_TO_UNITS(interval, UNIT_0_625_MS) + 0.5f,
        .itvl_max = SEC_TO_UNITS(interval, UNIT_0_625_MS) + 0.5f,
        .channel_map = 0,
        .own_addr_type = own_addr_type,
        .peer = peer,
        .filter_policy = BLE_HCI_CONN_FILT_NO_WL,
        .primary_phy = BLE_HCI_LE_PHY_1M,
        .secondary_phy = BLE_HCI_LE_PHY_1M,
        .tx_power = tx_power,
        .sid = 0,
    };

    // Configure must come before setting payloads.
    rc = ble_gap_ext_adv_configure(0,
        &adv_params,
        NULL,
        _advertising_event, self);
    if (rc != NIMBLE_OK) {
        return rc;
    }

    os_mbuf_t buf;
    _wrap_in_mbuf(advertising_data, advertising_data_len, &buf);
    // This copies the advertising data into buffers to send to the controller.
    // Therefore, we don't need to worry about the lifetime of our copy.
    rc = ble_gap_ext_adv_set_data(0, &buf.mbuf);
    if (rc != NIMBLE_OK) {
        return rc;
    }

    if (scan_response_data_len > 0) {
        _wrap_in_mbuf(scan_response_data, scan_response_data_len, &buf);
        // This copies the advertising data into buffers to send to the controller.
        // Therefore, we don't need to worry about the lifetime of our copy.
        rc = ble_gap_ext_adv_rsp_set_data(0, &buf.mbuf);
        if (rc != NIMBLE_OK) {
            return rc;
        }
    }

    rc = ble_gap_ext_adv_start(0, timeout_ms, 0);
    #else
    uint8_t conn_mode = connectable ? BLE_GAP_CONN_MODE_UND : BLE_GAP_CONN_MODE_NON;
    if (directed_to != NULL) {
        conn_mode = BLE_GAP_CONN_MODE_DIR;
    }

    struct ble_gap_adv_params adv_params = {
        .conn_mode = conn_mode,
        .disc_mode = BLE_GAP_DISC_MODE_GEN,
        .itvl_min = SEC_TO_UNITS(interval, UNIT_0_625_MS) + 0.5f,
        .itvl_max = SEC_TO_UNITS(interval, UNIT_0_625_MS) + 0.5f,
        .channel_map = 0,
        .filter_policy = BLE_HCI_CONN_FILT_NO_WL,
        .high_duty_cycle = high_duty_directed,
    };

    rc = ble_gap_adv_set_data(advertising_data, advertising_data_len);
    if (rc != NIMBLE_OK) {
        return rc;
    }

    if (scan_response_data_len > 0) {
        rc = ble_gap_adv_rsp_set_data(scan_response_data, scan_response_data_len);
        if (rc != NIMBLE_OK) {
            return rc;
        }
    }
    rc = ble_gap_adv_start(own_addr_type, directed_to != NULL ? &peer: NULL,
        timeout_ms,
        &adv_params,
        _advertising_event, self);
    #endif

    return rc;
}

void common_hal_bleio_adapter_start_advertising(bleio_adapter_obj_t *self, bool connectable,
    bool anonymous, uint32_t timeout, mp_float_t interval,
    mp_buffer_info_t *advertising_data_bufinfo, mp_buffer_info_t *scan_response_data_bufinfo,
    mp_int_t tx_power, const bleio_address_obj_t *directed_to) {
    if (self->user_advertising) {
        mp_raise_bleio_BluetoothError(MP_ERROR_TEXT("Already advertising."));
    } else {
        // If the user isn't advertising, then the background is. So, stop the
        // background advertising so the user can.
        common_hal_bleio_adapter_stop_advertising(self);
    }
    // interval value has already been validated.

    check_data_fit(advertising_data_bufinfo->len, connectable);
    check_data_fit(scan_response_data_bufinfo->len, connectable);

    if (advertising_data_bufinfo->len > 31 && scan_response_data_bufinfo->len > 0) {
        mp_raise_bleio_BluetoothError(MP_ERROR_TEXT("Extended advertisements with scan response not supported."));
    }


    if (advertising_data_bufinfo->len > 0 && directed_to != NULL) {
        mp_raise_bleio_BluetoothError(MP_ERROR_TEXT("Data not supported with directed advertising"));
    }

    if (anonymous) {
        mp_raise_NotImplementedError(NULL);
    }

    if ((uint64_t)timeout * 1000ll >= BLE_HS_FOREVER) {
        mp_raise_bleio_BluetoothError(MP_ERROR_TEXT("Timeout is too long: Maximum timeout length is %d seconds"),
            BLE_HS_FOREVER / 1000 - 1);
    }

    CHECK_NIMBLE_ERROR(_common_hal_bleio_adapter_start_advertising(self, connectable, anonymous, timeout, interval,
        advertising_data_bufinfo->buf,
        advertising_data_bufinfo->len,
        scan_response_data_bufinfo->buf,
        scan_response_data_bufinfo->len,
        tx_power,
        directed_to));
    self->user_advertising = true;
}

void common_hal_bleio_adapter_stop_advertising(bleio_adapter_obj_t *self) {
    self->user_advertising = false;
    if (!common_hal_bleio_adapter_get_advertising(self)) {
        return;
    }
    #if MYNEWT_VAL(BLE_EXT_ADV)
    int err_code = ble_gap_ext_adv_stop(0);
    #else
    int err_code = ble_gap_adv_stop();
    #endif

    if ((err_code != NIMBLE_OK) &&
        (err_code != BLE_HS_EALREADY) &&
        (err_code != BLE_HS_EINVAL)) {
        CHECK_NIMBLE_ERROR(err_code);
    }
}

void common_hal_bleio_adapter_erase_bonding(bleio_adapter_obj_t *self) {
    if (common_hal_bleio_adapter_get_enabled(self)) {
        ble_store_clear();
    } else {
        nvs_handle_t nimble_handle;
        esp_err_t err = nvs_open(NIMBLE_NVS_NAMESPACE, NVS_READWRITE, &nimble_handle);
        if (err != ESP_OK) {
            return;
        }
        nvs_erase_all(nimble_handle);
        nvs_commit(nimble_handle);
        nvs_close(nimble_handle);
    }
}
